--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -288,6 +288,7 @@ input[type="checkbox"]:focus-visible ~ .checkbox__box {
 }
 
 .grid {
+  position: relative;
   display: grid;
   gap: var(--gap, --spacing-md);
 }
@@ -364,27 +365,39 @@ input[type="checkbox"]:focus-visible ~ .checkbox__box {
   width: 1px;
 }
 
+.header {
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  z-index: 10;
+  justify-content: center;
+}
+
 .progress-bar {
   padding: 5px;
   height: 20px;
 }
 
 .password-strength {
-  width: 50px;
+  width: 70px;
   transform: rotate(90deg);
   z-index: -1;
   position: absolute;
-  top: 148px;
-  left: 188px;
+  top: 71px;
+  left: 2px
 }
 
 .strength-settings {
-  width: 50px;
+  width: 100px;
   transform: rotate(90deg);
   z-index: -1;
   position: absolute;
-  top: 250px;
-  right: 188px;
+  top: 150px;
+  right: -15px;
 }
 
 .progress-bar > span {
